--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </div>
   <div>
    <h2 class="main-title">ABOUT ME</h2>
-   <img class="img_aboutme" src="https://github.com/since9010/resume/blob/main/IMG_8923.JPG">
+   <img class="img_aboutme" src="https://github.com/since9010/resume/blob/main/IMG_8923.JPG?raw=true">
    <p class="about-me-text">I am a graduate student studying data analysis in the UMASS DACSS course.<br><br>I am from Korea and worked for the Korean government for 10 years as a public safety and disaster management manager before coming here in UMASS.<br><br>I'm interested in using and analyzing data in a variety of ways to get inspiration for public safety and disaster management.</p>
   </div>
  <section>
